# becker-hub

opencode-launcher/: .gitignore  AGENTS.md  DEV_NOTES.md  README.md  index.html  package-lock.json  package.json  vite.config.js
opencode-launcher/src/: App.svelte  main.js  stores.js
opencode-launcher/src-tauri/: Cargo.toml  tauri.conf.json
opencode-launcher/src-tauri/.cargo/: config.toml
opencode-launcher/src-tauri/icons/: icon.icns
opencode-launcher/src-tauri/src/: ai_dictionary.rs  main.rs  pty_manager.rs  whisper_engine.rs
opencode-launcher/src/lib/: NotificationPane.svelte  TabBar.svelte  Terminal.svelte  TerminalGrid.svelte  VoiceInput.svelte
